--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,22 +15,95 @@
     <ul class="cabecalho-lista-item">
         <li class="cabecalho-lista-item">Estudante</li>
         <li class="cabecalho-lista-item">Escola</li>
+        <li class="cabecalho-lista-item">Contatos</li>
     </ul>
 </header>
+
 <section class="escola">
     <div class="escola-conteudo">
         <h2 class="escola-titulo">Sobre a Escola</h2>
-        <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional através da Programação.</p>
-        <p class="escola-texto-dois">A turma mais famosa é a Segunda Série A. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega excelentes resultados!</p>
+        <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional
+            através da Programação.</p>
+        <p class="escola-texto-dois">A turma mais famosa é a Segunda Série A. Uma turma diversa e engajada, as vezes, um
+            pouco bagunceira, mas que entrega excelentes resultados!</p>
     </div>
     <img class="escola-imagem" src="./img/img2.png" alt="Professor no quadro">
 </section>
+
 <section class="estudante">
     <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
-    <img class="estudante-imagem" src="./img/img3.png" alt="Foto Marcelo">
-    <h3>Marcelo</h3>
-    <img class="estudante-icone" src=".img/img4.png" alt="Logo instagram">
-    <img class="estudante-icone" src=".img/img4.png" alt="Logo instagram">
-    <img class="estudante-icone" src=".img/img4.png" alt="Logo instagram">
+    <div class="estudante-todos">
+        <span></span>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./img/img3.png" alt="Foto Marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
+            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
+            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./img/img3.png" alt="Foto Marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
+            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
+            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./img/img3.png" alt="Foto Marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
+            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
+            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
+        </div>
+        <span></span>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./img/img3.png" alt="Foto Marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
+            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
+            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./img/img3.png" alt="Foto Marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
+            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
+            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./img/img3.png" alt="Foto Marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
+            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
+            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
+        </div>
+        <span></span>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./img/img3.png" alt="Foto Marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
+            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
+            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./img/img3.png" alt="Foto Marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
+            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
+            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./img/img3.png" alt="Foto Marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
+            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
+            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
+        </div>
+    </div>
 </section>
+
+<footer>
+    <img class="rodape-imagem" src="./img/img1.png" alt="Logo Alura Start">
+</footer>
+
 </html>
