--- a/index.html
+++ b/index.html
@@ -4,106 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Escola</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <title>Alura Plus</title>
 </head>
-<header class="cabecalho">
-    <img class="cabecalho-imagem" src="./img/img1.png" alt="Logo Alura">
-    <ul class="cabecalho-lista-item">
-        <li class="cabecalho-lista-item">Estudante</li>
-        <li class="cabecalho-lista-item">Escola</li>
-        <li class="cabecalho-lista-item">Contatos</li>
-    </ul>
-</header>
 
-<section class="escola">
-    <div class="escola-conteudo">
-        <h2 class="escola-titulo">Sobre a Escola</h2>
-        <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional
-            através da Programação.</p>
-        <p class="escola-texto-dois">A turma mais famosa é a Segunda Série A. Uma turma diversa e engajada, as vezes, um
-            pouco bagunceira, mas que entrega excelentes resultados!</p>
-    </div>
-    <img class="escola-imagem" src="./img/img2.png" alt="Professor no quadro">
-</section>
-
-<section class="estudante">
-    <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
-    <div class="estudante-todos">
-        <span></span>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="./img/img3.png" alt="Foto Marcelo">
-            <h3 class="estudante-nome">Marcelo</h3>
-            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
-            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
-            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
+<body>
+    <section class="container principal">
+        <div>
+        <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+        <img src="./img/Combo.png" alt="O combo AluraPlus">
+        <a href="www.alura.com.br"class="container-botao">Assine por 12x de R$ 120,00* Assinar somente o Alura+
         </div>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="./img/img3.png" alt="Foto Marcelo">
-            <h3 class="estudante-nome">Marcelo</h3>
-            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
-            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
-            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
-        </div>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="./img/img3.png" alt="Foto Marcelo">
-            <h3 class="estudante-nome">Marcelo</h3>
-            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
-            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
-            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
-        </div>
-        <span></span>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="./img/img3.png" alt="Foto Marcelo">
-            <h3 class="estudante-nome">Marcelo</h3>
-            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
-            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
-            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
-        </div>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="./img/img3.png" alt="Foto Marcelo">
-            <h3 class="estudante-nome">Marcelo</h3>
-            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
-            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
-            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
-        </div>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="./img/img3.png" alt="Foto Marcelo">
-            <h3 class="estudante-nome">Marcelo</h3>
-            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
-            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
-            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
-        </div>
-        <span></span>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="./img/img3.png" alt="Foto Marcelo">
-            <h3 class="estudante-nome">Marcelo</h3>
-            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
-            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
-            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
-        </div>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="./img/img3.png" alt="Foto Marcelo">
-            <h3 class="estudante-nome">Marcelo</h3>
-            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
-            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
-            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
-        </div>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="./img/img3.png" alt="Foto Marcelo">
-            <h3 class="estudante-nome">Marcelo</h3>
-            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
-            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
-            <a href="www.instagram.com.br" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram"></a>
-        </div>
-    </div>
-</section>
-
-<footer>
-    <img class="rodape-imagem" src="./img/img1.png" alt="Logo Alura Start">
-</footer>
+    </section>
+</body>
 
 </html>
